
+ Bug Fixes

- Fixed QuickNotepad build.xml
- Explicit folding did not behave correctly if a line contained both the
  start and end strings ({{{ and }}}) (Ollie Rutherfurd)
- If a plugin depended on a plugin whose jEdit version requirement was
  higher than the installed jEdit version, the 'Update Plugins' command
  would throw a NullPointerException
- Fixed stylesheet problem in the PDF output

* Version 4.0pre8 (a.k.a 4.0 release candidate 1)

+ New Features

- Added syntax highlighting for output of Hex plugin (Andre Kaplan)
- IBM Informix 4GL syntax highlighting (Vicente Salvador)

+ Enhancements

- Documentation updates
- 'Quick HyperSearch' with a selection, and 'Quick HyperSearch for Word'
  commands will now work even if the search bar is disabled
- BeanShell 1.2b5 included
- jEditLauncher 4.0.4 (John Gellene)
  - jedidiff.exe: new command line utility for displaying graphical
    comparison of two files using jEdit and the JDiff plugin
  - jedit.exe: new /1 command line switch that reads the remainder of
    the command line as a single file path, regardless of whitespace
    (required for Internet Explorer integration)
  - jEdit_IE.reg.txt: new, optional Windows registry information file
    for integrating jEdit with Internet Explorer (version 5 or later) as
    an HTML editor

+ Bug Fixes

- Fixed tip of the day that referred to the old S+BACK_SPACE/S+DELETE
  bindings
- Due to a typo in 4.0pre7, text areas that didn't have focus would also
  scroll to the caret location on a buffer change. This was not supposed
  to happen
- The text area will no longer scroll up and then down again on input if
  it is smaller than about six lines vertically
- Added workaround for search dialog box losing focus after 'keep
  searching' message shown
- If an error occurs while evaluating a BeanShell snippet during a
  'Replace All', the replace operation is aborted. This saves you from
  having to click through an endless stream of "BeanShell error" dialog
  boxes